<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_marginTop="8dp"
    android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/remove_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="00/00/2019"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@drawable/my_rectangle"
                android:backgroundTint="@color/colorAccent"
                android:backgroundTintMode="src_over"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_label_fuel_type"
                style="@style/Labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/type_of_fuel"
                app:layout_constraintEnd_toStartOf="@+id/tv_fuel_type"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_label_litres" />

            <TextView
                android:id="@+id/tv_fuel_type"
                style="@style/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="GLP"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_label_fuel_type"
                app:layout_constraintEnd_toEndOf="@+id/textView7" />

            <TextView
                android:id="@+id/tv_label_KmOnClock"
                style="@style/Labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_kms_on_the_clock"
                app:layout_constraintStart_toStartOf="@+id/tv_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_date" />

            <TextView
                android:id="@+id/tv_KmOnClock"
                style="@style/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="250000"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_label_KmOnClock"
                app:layout_constraintStart_toEndOf="@+id/tv_label_KmOnClock" />

            <TextView
                android:id="@+id/tv_label_litres"
                style="@style/Labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/litres_rifilled"
                app:layout_constraintStart_toStartOf="@+id/tv_label_KmOnClock"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_KmOnClock" />

            <TextView
                android:id="@+id/tv_litres"
                style="@style/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="30"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_label_litres"
                app:layout_constraintStart_toEndOf="@+id/tv_label_litres" />
            <TextView
                style="@style/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lts."
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_label_litres"
                app:layout_constraintStart_toEndOf="@+id/tv_litres"/>

            <TextView
                style="@style/Labels"
                android:id="@+id/tv_label_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/tv_price"
                app:layout_constraintBottom_toBottomOf="@+id/tv_KmOnClock"
                app:layout_constraintEnd_toStartOf="@+id/tv_price" />

            <TextView
                style="@style/value"
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="25,30"
                app:layout_constraintEnd_toStartOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="@+id/tv_label_price" />

            <TextView
                style="@style/value"
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="€"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_price" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>